--- a/templates/blog4.html
+++ b/templates/blog4.html
@@ -52,121 +52,87 @@
   <div class="main-container blog-container">
     <div class="inside-container">
       <div class="row">
-        <div class=" col-lg-8 ">
+        <div class=" col-lg-8">
           <div class="row">
             <div class="col-md-12 ">
               <div class="blog-post">
-                <div> <img src="http://img.mimacstudy.com/admin_sh/images/tzone/banner/531/151236331404900284" alt="" class="blog-image img-fluid"></div>
+                <div> <img src="http://img.mimacstudy.com/admin_sh/images/tzone/banner/531/151236331404900284" alt=""
+                    class="blog-image img-fluid"></div>
                 <div class="blog-description">
                   <div class="text-center"> <a href="#"> 영어 </a>
                     <h1>이명학의 리얼 [공감영어]</h1>
                     <div class="post-info">
                       <p> <span class="info-over"> <i class="far fa-user"></i> 강사 이명학</span>
                         <span class="spc-line"> |</span> <span class="info-over"> <i class="far fa-star"></i>4.7
-                          </span> <span class="spc-line"> |</span>
-                        <span class="info-over"> <i class="far fa-comment"></i> 525 comments </span> </p>
+                        </span> <span class="spc-line"> |</span>
+                        <span class="info-over"> <i class="far fa-comment"></i> 57 comments </span> </p>
                     </div>
                   </div>
-  
-                  <p> He busy revin' up his Powerful Mach So join us here each week my friends you're sure to get a
-                    smile from seven stranded castaways
-                    here on Gilligans Isle. Wouldn't you like to get away? Sometimes you want to go where everybody
-                    knows your name.A shadowy flight into the dangerous world of a man who does
-                    not exist.Come and knock on our door.</p>
-  
-  
-                  <div class="explore">
-                    <p> Explore strange new worlds to seek out new life and new civilizations to boldly go where no
-                      man has gone before.
-                    </p>
-                    <i class="fas fa-quote-right"></i>
-                  </div>
-                  <p>
-                    Sometimes you want to go where everybody knows your name. And they're always glad you came.
-                    Makin' your way in the world today takes everything you've got.
-                    Takin' a break from all your worries sure would help a lot. Makin' your way in the world today
-                    takes everything you've got.
-                  </p>
+
+                  <p> 추천 커리큘럼:신택스-알고리즘-리드앤로직</p>
+
                   <div class="row">
                     <div class="col-md-8  btn-icon">
                       <button>전체보기</button>
                     </div>
-  
+
                   </div>
                   <hr>
                 </div>
               </div>
             </div>
           </div>
-          <!--comments-->
-          <div class="row">
-            <div class="col-sm-12  ">
-              <div class="comment-container">
-                <span>comments(3)</span>
-                <hr>
-                <div class="row">
-                  <div class="col-sm-2 ">
-                    <img src="../static/image/max-image/happy-client-1.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10">
-                    <div class="comment-text">
-                      <span> Adam Smith <span class="vr-line">|</span> <span class="date-span">May 27,
-                          2016</span></span>
-                      <p>
-                        If you threw a party - invited everyone you knew. You would see the biggest gift would be
-                        from me and the card who does not exist.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
-                    </div>
-                  </div>
-                  <hr class="comment-line">
-                </div>
-                <div class="row comment-row except-row">
-                  <div class="col-sm-2  ">
-                    <img src="../static/image/max-image/happy-client.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10 ">
-                    <div class="comment-text">
-                      <span> Eliana Doe <span style="color:#aeaeae;">|</span> <span style="color: #23a042;">Oct 07,
-                          2016</span></span>
-                      <p>
-                        Their house is a museum where people come to see ‘em. They really are a scream the Addams
-                        Family.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
-                    </div>
-                  </div>
-                  <hr class="comment-line">
-                </div>
-                <div class="row comment-row ">
-                  <div class="col-sm-2 ">
-                    <img src="../static/image/max-image/happy-client-3.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10 ">
-                    <div class="comment-text">
-                      <span> Julie Jackey <span style="color:#aeaeae;">|</span> <span style="color: #23a042;">Dec
-                          24, 2016</span></span>
-                      <p>
-                        Didn't need no welfare states. Everybody pulled his weight. Gee our old Lasalle ran great.
-                        Those were the days.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
-                    </div>
-                  </div>
-                  <hr class="comment-line">
-                </div>
-  </div>
- 
 
-  <div style="position: absolute; left: 880px; bottom:590px; width: 100px;">
-    <img src="../static/image/blog/post-8.JPG"  onclick="go_top();">
+          <div class="main-container blog-container">
+            <div class="inside-container">
+              <div class="row">
+                <div class=" col-lg-12 ">
+                  <div class="row">
+                    <div class="col-md-12 ">
+                      <div class="blog-post">
+                        <div> <img src="../static/image/blog/rng.JPG" alt="" class="blog-image img-fluid"></div>
+                        <div class="blog-description">
+                          <div class="text-center">영어 </a>
+                            <h1>믿어봐! 문장 읽는 법을 알려줄게</h1>
+                            <div class="post-info">
+                              <p> <span class="info-over"> <i class="far fa-user"></i> 강사 조정식</span>
+                                <span class="spc-line"> |</span> <span class="info-over"> <i class="far fa-star"></i>4.4
+                                </span> <span class="spc-line"> |</span>
+                                <span class="info-over"> <i class="far fa-comment"></i> 21 comments </span> </p>
+                            </div>
+                          </div>
+
+                          <p> 수능 영어의 새로운 기준</p>
+                          <p> 문장편, 지문편만 들어도 문장을 자연스럽게 독해하는 방법에 지문을 관통해서 해석하는 방법까지 알려줍니다</p>
+                          <p> 추천 커리큘럼: (1-2등급)믿어봐 문장편-믿어봐 지문편-확실해 빈칸편-확실해 순서삽입- 실전모의고사</p>
+                          <p> (3등급~):괜찮아 어휘편-괜찮아 문장편-믿어봐 문장편- 믿어봐 지문편</p>
+                          <div class="row">
+                            <div class="col-md-8  btn-icon">
+                              <button>전체보기</button>
+                            </div>
+
+                          </div>
+                          <hr>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+            <div style="position: absolute; left: 880px; bottom:590px; width: 100px;">
+              <img src="../static/image/blog/post-8.JPG" onclick="go_top();">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div> 
-</div>
   </div>
-</div>
-</div>
-</div>
   <!-- partner carousel-->
   <div class="main-container partner-bg">
     <div class="inside-container ">
@@ -248,9 +214,9 @@
           </div>
         </div>
         <div class=" col-sm-6 col-lg-3 foot-col-padd">
-          <div class="foot-logo"><img src="../static/image/image/foot-logo.JPG" alt="" class="img-fluid"></div>
+          <div class="foot-logo"><img src="../static/image/image/footlogo.png" alt="" class="img-fluid"></div>
           <div class="dream-text">
-            <p>ABCDEFG </p>
+            <p>2019 해커톤</p>
           </div>
           <div>
             <i class="fab fa-facebook-f foot-icon "></i>
@@ -266,15 +232,15 @@
           <hr>
           <div class="row contact-row-margin">
             <i class="fas fa-map-marker-alt contact-icon"></i>
-            <p> 필문대로<br>뿅.</p>
+            <p> 필문대로<br>조선대학교 학생회관</p>
           </div>
           <div class="row contact-row-margin">
             <i class="fas fa-phone fa-rotate-90 contact-icon"></i>
-            <p>+(11)123 456 789</p>
+            <p>+(062)230-****</p>
           </div>
           <div class="row contact-row-margin">
             <i class="far fa-envelope contact-icon "> </i>
-            <p> info@flamix.com </p>
+            <p> likelion@chosun.kr </p>
           </div>
         </div>
         <div class="col-sm-6  col-lg-3 pop-col">
@@ -296,7 +262,7 @@
       <div class="row">
         <div class="col-12 copyright-text">
           <center>
-            <p> &#169; 2019 <a href="http://digitaconnect.com/">Digital Connect</a>. All Rights Reserved </p>
+            <p> &#169; 2019 <a href="http://digitaconnect.com/">STUDYCASTLE</a>. All Rights Reserved </p>
         </div>
         </center>
       </div>
@@ -318,8 +284,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script src="../static/js/script.js">  </script>
+
 </body>
 
-
 </html>
-{%endblock%}
+{% endblock %}
