--- a/templates/review/review_list.html
+++ b/templates/review/review_list.html
@@ -8,7 +8,7 @@
         <div class="card border-0" style="background-color: rgba(245, 245, 245, 0.2);">
           <div class="card-body text-center">
             <h5 class="card-title"> {{ review.title }}</a></h5>
-           <h6 class="card-text text-center">평점 : {{review.test}} {{review.result}}</h6>
+           <h6 class="card-text text-center">평점 : {{ review.total }} </h6>
             <footer class="blockquote-footer"><cite title="Source Title">{{review.username}}</cite></footer>
             </blockquote>
             <a href="#" class="btn text-dark">자세히</a>
