--- a/templates/blog.html
+++ b/templates/blog.html
@@ -68,25 +68,10 @@
                     </div>
                   </div>
   
-                  <p> He busy revin' up his Powerful Mach So join us here each week my friends you're sure to get a
-                    smile from seven stranded castaways
-                    here on Gilligans Isle. Wouldn't you like to get away? Sometimes you want to go where everybody
-                    knows your name.A shadowy flight into the dangerous world of a man who does
-                    not exist.Come and knock on our door.</p>
+                  <p> 추천 커리큘럼:출제자의 눈-4step-심기일전</p>
+                  <p> +심기일전 듣기 전에 개념 꼭 다 마치고 가기</p>
+                  <p> +도표 문제가 걸린다면, 도표 특강도 있어요</p>
   
-  
-                  <div class="explore">
-                    <p> Explore strange new worlds to seek out new life and new civilizations to boldly go where no
-                      man has gone before.
-                    </p>
-                    <i class="fas fa-quote-right"></i>
-                  </div>
-                  <p>
-                    Sometimes you want to go where everybody knows your name. And they're always glad you came.
-                    Makin' your way in the world today takes everything you've got.
-                    Takin' a break from all your worries sure would help a lot. Makin' your way in the world today
-                    takes everything you've got.
-                  </p>
                   <div class="row">
                     <div class="col-md-8  btn-icon">
                       <button>전체보기</button>
@@ -98,64 +83,47 @@
               </div>
             </div>
           </div>
-          <!--comments-->
-          <div class="row">
-            <div class="col-sm-12  ">
-              <div class="comment-container">
-                <span>comments(3)</span>
-                <hr>
-                <div class="row">
-                  <div class="col-sm-2 ">
-                    <img src="../static/image/max-image/happy-client-1.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10">
-                    <div class="comment-text">
-                      <span> Adam Smith <span class="vr-line">|</span> <span class="date-span">May 27,
-                          2016</span></span>
-                      <p>
-                        If you threw a party - invited everyone you knew. You would see the biggest gift would be
-                        from me and the card who does not exist.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
+
+ 
+          <div class="main-container blog-container">
+            <div class="inside-container">
+              <div class="row">
+                <div class=" col-lg-12 ">
+                  <div class="row">
+                    <div class="col-md-12 ">
+                      <div class="blog-post">
+                        <div> <img src="../static/image/blog/post-3.JPG" alt="" class="blog-image img-fluid"></div>
+                        <div class="blog-description">
+                          <div class="text-center"> <a href="#"> 지리 </a>
+                            <h1>이것이 개념이다</h1>
+                            <div class="post-info">
+                              <p> <span class="info-over"> <i class="far fa-user"></i> 강사 이기상</span>
+                                <span class="spc-line"> |</span> <span class="info-over"> <i class="far fa-star"></i>4.4
+                                  </span> <span class="spc-line"> |</span>
+                                <span class="info-over"> <i class="far fa-comment"></i> 21 comments </span> </p>
+                            </div>
+                          </div>
+          
+                          <p> 시간을 줄이는 게 관건인 화작문! 고전문법, 현대문법을 한번에 정리해주는 강의입니다.</p>
+                          <p> 추천커리큘럼: 이것이 개념이다-이것이 기출이다-이실직고-이것이마지막이다</p>
+          
+                          <div class="row">
+                            <div class="col-md-8  btn-icon">
+                              <button>전체보기</button>
+                            </div>
+          
+                          </div>
+                          <hr>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                  <hr class="comment-line">
                 </div>
-                <div class="row comment-row except-row">
-                  <div class="col-sm-2  ">
-                    <img src="../static/image/max-image/happy-client.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10 ">
-                    <div class="comment-text">
-                      <span> Eliana Doe <span style="color:#aeaeae;">|</span> <span style="color: #23a042;">Oct 07,
-                          2016</span></span>
-                      <p>
-                        Their house is a museum where people come to see ‘em. They really are a scream the Addams
-                        Family.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
-                    </div>
-                  </div>
-                  <hr class="comment-line">
-                </div>
-                <div class="row comment-row ">
-                  <div class="col-sm-2 ">
-                    <img src="../static/image/max-image/happy-client-3.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10 ">
-                    <div class="comment-text">
-                      <span> Julie Jackey <span style="color:#aeaeae;">|</span> <span style="color: #23a042;">Dec
-                          24, 2016</span></span>
-                      <p>
-                        Didn't need no welfare states. Everybody pulled his weight. Gee our old Lasalle ran great.
-                        Those were the days.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
-                    </div>
-                  </div>
-                  <hr class="comment-line">
-                </div>
-  </div>
+              </div>
+            </div>
+   
+           
+   
  
 
   <div style="position: absolute; left: 880px; bottom:590px; width: 100px;">
@@ -250,7 +218,7 @@
         <div class=" col-sm-6 col-lg-3 foot-col-padd">
           <div class="foot-logo"><img src="../static/image/image/footlogo.png" alt="" class="img-fluid"></div>
           <div class="dream-text">
-            <p>ABCDEFG </p>
+            <p>2019 해커톤</p>
           </div>
           <div>
             <i class="fab fa-facebook-f foot-icon "></i>
@@ -266,15 +234,15 @@
           <hr>
           <div class="row contact-row-margin">
             <i class="fas fa-map-marker-alt contact-icon"></i>
-            <p> 필문대로<br>뿅.</p>
+            <p> 필문대로<br>조선대학교 학생회관</p>
           </div>
           <div class="row contact-row-margin">
             <i class="fas fa-phone fa-rotate-90 contact-icon"></i>
-            <p>+(11)123 456 789</p>
+            <p>+(062)230-****</p>
           </div>
           <div class="row contact-row-margin">
             <i class="far fa-envelope contact-icon "> </i>
-            <p> info@flamix.com </p>
+            <p> likelion@chosun.kr </p>
           </div>
         </div>
         <div class="col-sm-6  col-lg-3 pop-col">
@@ -296,7 +264,7 @@
       <div class="row">
         <div class="col-12 copyright-text">
           <center>
-            <p> &#169; 2019 <a href="http://digitaconnect.com/">Digital Connect</a>. All Rights Reserved </p>
+            <p> &#169; 2019 <a href="http://digitaconnect.com/">STUDYCASTLE</a>. All Rights Reserved </p>
         </div>
         </center>
       </div>
@@ -318,8 +286,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script src="../static/js/script.js">  </script>
-</body>
 
+  </body>
 
-</html>
-{%endblock%}
+  </html>
+  {% endblock %}
