--- a/templates/blog2.html
+++ b/templates/blog2.html
@@ -52,7 +52,7 @@
   <div class="main-container blog-container">
     <div class="inside-container">
       <div class="row">
-        <div class=" col-lg-8 ">
+        <div class=" col-lg-9 ">
           <div class="row">
             <div class="col-md-12 ">
               <div class="blog-post">
@@ -68,25 +68,8 @@
                     </div>
                   </div>
   
-                  <p> He busy revin' up his Powerful Mach So join us here each week my friends you're sure to get a
-                    smile from seven stranded castaways
-                    here on Gilligans Isle. Wouldn't you like to get away? Sometimes you want to go where everybody
-                    knows your name.A shadowy flight into the dangerous world of a man who does
-                    not exist.Come and knock on our door.</p>
+                  <p> 정시러들 제2 외국어 열심히 하면 가끔 대박날 수 있어요</p>
   
-  
-                  <div class="explore">
-                    <p> Explore strange new worlds to seek out new life and new civilizations to boldly go where no
-                      man has gone before.
-                    </p>
-                    <i class="fas fa-quote-right"></i>
-                  </div>
-                  <p>
-                    Sometimes you want to go where everybody knows your name. And they're always glad you came.
-                    Makin' your way in the world today takes everything you've got.
-                    Takin' a break from all your worries sure would help a lot. Makin' your way in the world today
-                    takes everything you've got.
-                  </p>
                   <div class="row">
                     <div class="col-md-8  btn-icon">
                       <button>전체보기</button>
@@ -98,67 +81,49 @@
               </div>
             </div>
           </div>
-          <!--comments-->
-          <div class="row">
-            <div class="col-sm-12  ">
-              <div class="comment-container">
-                <span>comments(3)</span>
-                <hr>
-                <div class="row">
-                  <div class="col-sm-2 ">
-                    <img src="../static/image/max-image/happy-client-1.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10">
-                    <div class="comment-text">
-                      <span> Adam Smith <span class="vr-line">|</span> <span class="date-span">May 27,
-                          2016</span></span>
-                      <p>
-                        If you threw a party - invited everyone you knew. You would see the biggest gift would be
-                        from me and the card who does not exist.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
-                    </div>
-                  </div>
-                  <hr class="comment-line">
-                </div>
-                <div class="row comment-row except-row">
-                  <div class="col-sm-2  ">
-                    <img src="../static/image/max-image/happy-client.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10 ">
-                    <div class="comment-text">
-                      <span> Eliana Doe <span style="color:#aeaeae;">|</span> <span style="color: #23a042;">Oct 07,
-                          2016</span></span>
-                      <p>
-                        Their house is a museum where people come to see ‘em. They really are a scream the Addams
-                        Family.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
-                    </div>
-                  </div>
-                  <hr class="comment-line">
-                </div>
-                <div class="row comment-row ">
-                  <div class="col-sm-2 ">
-                    <img src="../static/image/max-image/happy-client-3.jpg" alt="" class="comment-img img-fluid">
-                  </div>
-                  <div class="col-sm-10 ">
-                    <div class="comment-text">
-                      <span> Julie Jackey <span style="color:#aeaeae;">|</span> <span style="color: #23a042;">Dec
-                          24, 2016</span></span>
-                      <p>
-                        Didn't need no welfare states. Everybody pulled his weight. Gee our old Lasalle ran great.
-                        Those were the days.
-                      </p>
-                      <p class="reply"> <i class="fas fa-reply"></i> Reply </p>
-                    </div>
-                  </div>
-                  <hr class="comment-line">
-                </div>
-  </div>
- 
 
-  <div style="position: absolute; left: 880px; bottom:590px; width: 100px;">
+ 
+ 
+    <div class="main-container blog-container">
+      <div class="inside-container">
+        <div class="row">
+          <div class=" col-lg-12 ">
+            <div class="row">
+              <div class="col-md-12 ">
+                <div class="blog-post">
+                  <div> <img src="../static/image/blog/viet.JPG" alt="" class="blog-image img-fluid"></div>
+                  <div class="blog-description">
+                    <div class="text-center"> <a href="#"> 제2외국어 </a>
+                      <h1>베트남어 기초개념</h1>
+                      <div class="post-info">
+                        <p> <span class="info-over"> <i class="far fa-user"></i> 강사 홍빛나</span>
+                          <span class="spc-line"> |</span> <span class="info-over"> <i class="far fa-star"></i>4.7
+                            </span> <span class="spc-line"> |</span>
+                          <span class="info-over"> <i class="far fa-comment"></i> 55 comments </span> </p>
+                      </div>
+                    </div>
+    
+                    <p>추천 커리큘럼:가장 쉬운 베트남어 첫걸음-빛나는 베트남어 기초개념-빛나는 베트남어 실전</p>
+    
+                    <div class="row">
+                      <div class="col-md-8  btn-icon">
+                        <button>전체보기</button>
+                      </div>
+          
+                    </div>
+                    <hr>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    
+   
+
+  <div style="position: absolute; left:1000px; bottom:590px; width: 80px;">
     <img src="../static/image/blog/post-8.JPG"  onclick="go_top();">
   </div>
 </div> 
@@ -222,104 +187,104 @@
   </div>
 
 
-  <!--footer -->
-  <footer class="page-footer footer-bg">
-    <div class="inside-container">
-      <div class="row footer-padd">
+<!--footer -->
+<footer class="page-footer footer-bg">
+  <div class="inside-container">
+    <div class="row footer-padd">
 
-        <div class=" col-sm-6 col-lg-3 pop-col">
-          <span></span>
+      <div class=" col-sm-6 col-lg-3 pop-col">
+        <span></span>
 
-          <div class="row">
-            <div class="col-6 pop-link">
-              <a href="#"></a>
-              <a href="#"></a>
-              <a href="#"></a>
-              <a href="#"></a>
-              <a href="#"></a>
+        <div class="row">
+          <div class="col-6 pop-link">
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
 
-            </div>
-            <div class=" col-6  pop-link">
-              <a href="#"> </a>
-              <a href="#"> </a>
-              <a href="#"></a>
-              <a href="#"> </a>
-            </div>
+          </div>
+          <div class=" col-6  pop-link">
+            <a href="#"> </a>
+            <a href="#"> </a>
+            <a href="#"></a>
+            <a href="#"> </a>
           </div>
         </div>
-        <div class=" col-sm-6 col-lg-3 foot-col-padd">
-          <div class="foot-logo"><img src="../static/image/image/foot-logo.JPG" alt="" class="img-fluid"></div>
-          <div class="dream-text">
-            <p>ABCDEFG </p>
-          </div>
-          <div>
-            <i class="fab fa-facebook-f foot-icon "></i>
-            <i class="fab fa-twitter foot-icon "></i>
-            <i class="fab fa-linkedin-in foot-icon "></i>
-            <i class="fab fa-tumblr  foot-icon"></i>
-            <i class="fab fa-vimeo-v  foot-icon"></i>
-            <i class="fab fa-pinterest-p foot-icon "></i>
-          </div>
-        </div>
-        <div class="col-sm-6 col-lg-3 pop-col ">
-          <span>contact us</span>
-          <hr>
-          <div class="row contact-row-margin">
-            <i class="fas fa-map-marker-alt contact-icon"></i>
-            <p> 필문대로<br>뿅.</p>
-          </div>
-          <div class="row contact-row-margin">
-            <i class="fas fa-phone fa-rotate-90 contact-icon"></i>
-            <p>+(11)123 456 789</p>
-          </div>
-          <div class="row contact-row-margin">
-            <i class="far fa-envelope contact-icon "> </i>
-            <p> info@flamix.com </p>
-          </div>
-        </div>
-        <div class="col-sm-6  col-lg-3 pop-col">
-          <span></span>
-
-          <div class="row ltl-blog row-ltl-blog">
-            <div class="col-3"> <img src="" alt="" class="blog-img"></div>
-            <div class="col-9 max-award">
-              <p> </p>
-              <i class="#"></i> <span> </span> <span class="blog-vl"> </span>
-              <i class="#"></i><span> </span>
-            </div>
-          </div>
-
-          <div class="text-center"><a href="#" class="view-blog"></a> </div>
-        </div>
-
       </div>
-      <div class="row">
-        <div class="col-12 copyright-text">
-          <center>
-            <p> &#169; 2019 <a href="http://digitaconnect.com/">Digital Connect</a>. All Rights Reserved </p>
+      <div class=" col-sm-6 col-lg-3 foot-col-padd">
+        <div class="foot-logo"><img src="../static/image/image/footlogo.png" alt="" class="img-fluid"></div>
+        <div class="dream-text">
+          <p>2019 해커톤</p>
         </div>
-        </center>
+        <div>
+          <i class="fab fa-facebook-f foot-icon "></i>
+          <i class="fab fa-twitter foot-icon "></i>
+          <i class="fab fa-linkedin-in foot-icon "></i>
+          <i class="fab fa-tumblr  foot-icon"></i>
+          <i class="fab fa-vimeo-v  foot-icon"></i>
+          <i class="fab fa-pinterest-p foot-icon "></i>
+        </div>
       </div>
+      <div class="col-sm-6 col-lg-3 pop-col ">
+        <span>contact us</span>
+        <hr>
+        <div class="row contact-row-margin">
+          <i class="fas fa-map-marker-alt contact-icon"></i>
+          <p> 필문대로<br>조선대학교 학생회관</p>
+        </div>
+        <div class="row contact-row-margin">
+          <i class="fas fa-phone fa-rotate-90 contact-icon"></i>
+          <p>+(062)230-****</p>
+        </div>
+        <div class="row contact-row-margin">
+          <i class="far fa-envelope contact-icon "> </i>
+          <p> likelion@chosun.kr </p>
+        </div>
+      </div>
+      <div class="col-sm-6  col-lg-3 pop-col">
+        <span></span>
+
+        <div class="row ltl-blog row-ltl-blog">
+          <div class="col-3"> <img src="" alt="" class="blog-img"></div>
+          <div class="col-9 max-award">
+            <p> </p>
+            <i class="#"></i> <span> </span> <span class="blog-vl"> </span>
+            <i class="#"></i><span> </span>
+          </div>
+        </div>
+
+        <div class="text-center"><a href="#" class="view-blog"></a> </div>
+      </div>
+
     </div>
-  </footer>
+    <div class="row">
+      <div class="col-12 copyright-text">
+        <center>
+          <p> &#169; 2019 <a href="http://digitaconnect.com/">STUDYCASTLE</a>. All Rights Reserved </p>
+      </div>
+      </center>
+    </div>
+  </div>
+</footer>
 
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
-  <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-  <script src="../static/js/script.js">  </script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+  crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.js"></script>
+<script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
+<script src="../static/js/script.js">  </script>
+
 </body>
 
-
 </html>
-{%endblock%}
+{% endblock %}
