--- a/templates/index.html
+++ b/templates/index.html
@@ -190,7 +190,7 @@
         <div class=" col-sm-6 col-lg-3 foot-col-padd">
           <div class="foot-logo"><img src="../static/image/image/footlogo.png" alt="" class="img-fluid"></div>
           <div class="dream-text">
-            <p>ABCDEFG </p>
+            <p>2019 해커톤</p>
           </div>
           <div>
             <i class="fab fa-facebook-f foot-icon "></i>
@@ -206,15 +206,15 @@
           <hr>
           <div class="row contact-row-margin">
             <i class="fas fa-map-marker-alt contact-icon"></i>
-            <p> 필문대로<br>뿅.</p>
+            <p> 필문대로<br>조선대학교 학생회관</p>
           </div>
           <div class="row contact-row-margin">
             <i class="fas fa-phone fa-rotate-90 contact-icon"></i>
-            <p>+(11)123 456 789</p>
+            <p>+(062)230-****</p>
           </div>
           <div class="row contact-row-margin">
             <i class="far fa-envelope contact-icon "> </i>
-            <p> info@flamix.com </p>
+            <p> likelion@chosun.kr </p>
           </div>
         </div>
         <div class="col-sm-6  col-lg-3 pop-col">
@@ -236,7 +236,7 @@
       <div class="row">
         <div class="col-12 copyright-text">
           <center>
-            <p> &#169; 2019 <a href="http://digitaconnect.com/">Digital Connect</a>. All Rights Reserved </p>
+            <p> &#169; 2019 <a href="http://digitaconnect.com/">STUDYCASTLE</a>. All Rights Reserved </p>
         </div>
         </center>
       </div>
