--- a/templates/review/review_form.html
+++ b/templates/review/review_form.html
@@ -19,7 +19,7 @@
                                       id="{{ field.id_for_label }}"
                                       name="{{ field.html_name }}"
                                       style="background-color: rgba(245, 245, 245, 0);">{{ field.value|default_if_none:'' }}</textarea>
-                            {% elif field.html_name == 'volume' or field.html_name == 'runningtime' or field.html_name == 'fun' %}
+                            {% elif field.html_name == 'volume' or field.html_name == 'runningtime' or field.html_name == 'fun'  or field.html_name == 'total' %}
                                 {{field}}
                             {% else %}
                             <input type="{{ field.field.widget.input_type }}"
